basic css complete

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
     <title>Star Wars Trivia!</title>
   </head>
   <body>
-    <div class="Main Container">
-      <div id="questions container">Star Wars</div>
-    </div>
-    <div class="controls">
-      <button id="next">Next</button>
+    <div id="main-container">
+      <div id="questions-container">Star Wars questions</div>
+      <button class="button">question</button>
+      <button class="button">question</button>
+      <button class="button">question</button>
+      <button class="button">question</button>
+
+      <div class="controls">
+        <button id="next">Next</button>
+      </div>
     </div>
   </body>
 </html>
