working with js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <div id="main-container">
-      <div id="questions-container">Star Wars questions</div>
+      <div id="questions-container">star wars</div>
+
       <button class="button">question</button>
       <button class="button">question</button>
       <button class="button">question</button>
